# DDSense

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: default.yml
docs/: INSTALLATION.md  RUN.md
idl/temperature/: Temperature.idl
include/DDSense/publisher/: temperature_pub.hpp
include/DDSense/subscriber/: temperature_sub.hpp
src/: main.cpp  project_class.cpp
src/publisher/: temperature_pub.cpp
src/subscriber/: temperature_sub.cpp
